<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="bjfu.it.liuchangxin.starbuzz.viewmodels.HomeViewModel" />

        <variable
            name="settingsClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="hasFavorite"
            type="boolean" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            style="@style/Home"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:contentDescription="@string/a11y_settings"
                android:onClick="@{settingsClickListener}"
                android:src="@drawable/ic_settings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/banner_text"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/home_header_margin"
                android:text="@string/suggested_for_you"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.example.library.banner.BannerLayout
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_banner_height"
                android:layout_marginTop="@dimen/margin_small"
                app:autoPlaying="true"
                app:centerScale="1.3"
                app:itemSpace="20"
                app:layout_constraintTop_toBottomOf="@id/banner_text"
                app:moveSpeed="10" />

            <TextView
                android:id="@+id/favorite_text"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:text="@string/favorite"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/banner"
                app:show="@{hasFavorite}" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/favorite"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_card_height"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/favorite_text"
                app:show="@{hasFavorite}"
                tools:listitem="@layout/list_item_home" />

            <TextView
                android:id="@+id/trending_text"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:text="@string/trending"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/favorite" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/trending"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_card_height"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/trending_text"
                tools:listitem="@layout/list_item_home" />

            <TextView
                android:id="@+id/editors_choice_text"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:text="@string/editors_choice"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trending" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/editors_choice"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_card_height"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/editors_choice_text"
                tools:listitem="@layout/list_item_home" />

            <TextView
                android:id="@+id/digital_electronics_text"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_normal"
                android:text="@string/digital_electronics"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editors_choice" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/digital_electronics"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_card_height"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/digital_electronics_text"
                tools:listitem="@layout/list_item_home" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
