<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="itemClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="minusClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="addClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="removeClickListener"
            type="android.view.View.OnClickListener" />

        <variable
            name="item"
            type="bjfu.it.liuchangxin.starbuzz.data.Commodity" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/card_side_margin"
        android:layout_marginEnd="@dimen/card_side_margin"
        android:layout_marginBottom="@dimen/card_bottom_margin"
        app:cardElevation="@dimen/card_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="@dimen/shopping_cart_image_width"
                android:layout_height="@dimen/shopping_cart_image_height"
                android:contentDescription="@string/a11y_item_image"
                android:onClick="@{itemClickListener}"
                android:scaleType="centerCrop"
                app:imageFromUri="@{item.imageSourceId}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="2dp"
                tools:src="@drawable/hamburger" />

            <TextView
                android:id="@+id/item_name"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:onClick="@{itemClickListener}"
                android:text="@{item.name}"
                app:layout_constraintBottom_toTopOf="@id/item_price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/item_image"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Hamburger" />

            <TextView
                android:id="@+id/item_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:onClick="@{itemClickListener}"
                android:text="@{@string/peso_sign_price(item.price)}"
                android:textAppearance="?attr/textAppearanceListItemSecondary"
                android:textColor="@color/colorPrice"
                app:layout_constraintBottom_toTopOf="@id/button_minus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/item_image"
                app:layout_constraintTop_toBottomOf="@id/item_name"
                tools:text="¥22" />

            <ImageButton
                android:id="@+id/button_minus"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/a11y_decrease_commodity_quantity"
                android:onClick="@{minusClickListener}"
                android:src="@drawable/ic_minus"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/item_quantity"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/item_image"
                app:layout_constraintTop_toBottomOf="@id/item_price" />

            <TextView
                android:id="@+id/item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center"
                android:text="@{String.valueOf(item.quantity)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_plus"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_minus"
                app:layout_constraintTop_toBottomOf="@id/item_price"
                tools:layout_editor_absoluteY="51dp"
                tools:text="3" />

            <ImageButton
                android:id="@+id/button_plus"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/a11y_increase_commodity_quantity"
                android:onClick="@{addClickListener}"
                android:src="@drawable/ic_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_remove"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/item_quantity"
                app:layout_constraintTop_toBottomOf="@id/item_price" />

            <ImageButton
                android:id="@+id/button_remove"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/a11y_remove_commodity"
                android:onClick="@{removeClickListener}"
                android:src="@drawable/ic_remove"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/button_plus"
                app:layout_constraintTop_toBottomOf="@id/item_price" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>